Fri Jan 11 18:05:07 2002  Owen Taylor  <otaylor@redhat.com>

	* pixops/pixops.c: Fix integer overflow for the values
	passed to the pixel functions. (#55148, fix from Michael Hore)

Fri Jan 11 17:53:58 2002  Owen Taylor  <otaylor@redhat.com>

	* pixops/pixops.c (pixops_scale_nearest): Remove meaningless
	FIXME.

	* pixops/pixops.c (pixops_process): Comment the computation
	of run_end_index and fix some edge cases.

	* pixops/{scale_line_22_33_mmx.S, composite_line_22_4a4_mmx.S:
	composite_line_color_22_4a4_mmx.S}: Handle the case where
	dest <= dest_end properly. (#52001, fix from Michael Hore)

Thu Jan 10 16:48:30 2002  Owen Taylor  <otaylor@redhat.com>

	* pixops/pixops.c: Replace some	hardcoded values with the 
	SUBSAMPLE constant used elsewhere. (#51033)

Wed Jan  9 11:29:44 2002  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (s-enum-types-h): Include glib-object.h,
	Add G_BEGIN_DECLS/END_DECLS to gdk-pixbuf-enum-types.h. (#68325,
	Mikael Hermansson)

	* *.h: G_BEGIN_DECLS cleanups.

Tue Jan  8 10:58:04 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk-pixbuf-util.c (gdk_pixbuf_saturate_and_pixelate): 
	 - Massive cleanup, make actually legible. 
	 - Fix some clamp-to-range bugs	found by Jim Cape (#68231). 
	 - Add a g_return_if_fail() if src and dest alpha don't match.
	 - Allow for src_rowstride != dest_rowstride.

2002-01-04  Hans Breuer  <hans@breuer.org>

	* gdk_pixbuf.def : don't export functions prefixed
	with underscore

	* makefile.msc : use -FImsvc_recommende_pragmas.h

Thu Jan  3 19:31:58 2002  Owen Taylor  <otaylor@redhat.com>

	* pixops/pixops.c (scale_line_22_33): Fix and uncomment
	non-MMX version.

	* pixops/pixops.c (pixops_composite_nearest): Remove a
	division.

	* pixops/pixops.c (pixops_composite): Add some docs
	about the parameters.

	* pixops/README: Add notes about the correct algorithms
	for alpha compositing and how to implement them quickly.

2001-12-29  Tor Lillqvist  <tml@iki.fi>

	* Makefile.am (EXTRA_DIST): Add makefile.msc.
